istio/manifests/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication

metadata:
    name: peer-authentication
    namespace: dev

spec:
    mtls:
        mode: STRICT
