istio/manifests/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
    name: gateway
    namespace: istio-system

spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
            number: 80
            name: http
            protocol: http2
          hosts:
            - whoami.127.0.0.1.nip.io
