istio/manifests/rabbitmq.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
    name: rabbitmq-virtualservice
    namespace: rabbitmq-system

spec:
    hosts:
        - rabbitmq-cluster.rabbitmq-system.svc.cluster.local
    http:
        - route:
            - destination:
                  host: rabbitmq-cluster
                  port:
                      number: 5672
