istio/manifests/whoami.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
    name: whoami-virtualservice
    namespace: default

spec:
    hosts:
        - whoami.127.0.0.1.nip.io
    gateways:
        - istio-system/gateway
    http:
        - route:
            - destination:
                  host: whoami-service
                  port:
                      number: 80
          match:
            - uri:
                exact: /
